#71 ~ fix spacing between paragraphs

--- a/app/assets/_dev/css/elements/typography.css
+++ b/app/assets/_dev/css/elements/typography.css
@@ -35,6 +35,11 @@ h5, h6, .heading-xs {
 article {
     p {
         line-height: rem(32px);
+        @apply my-5;
+
+        &:first-of-type {
+            @apply mt-0;
+        }
     }
 
     h1, h2, h3, h4, h5, h6 {
